opam-version: "1.2"
name: "mirage-types"
version: "3.0.0"
maintainer: ["anil@recoil.org" "thomas@gazagnaire.org"]
authors: "The MirageOS team"
homepage: "https://github.com/mirage/mirage"
bug-reports: "https://github.com/mirage/mirage/issues/"
tags: ["org:mirage" "org:xapi-project"]
dev-repo: "https://github.com/mirage/mirage.git"
build: [make "build-types"]
install: [make "install-types"]
remove: ["ocamlfind" "remove" "mirage-types"]
depends: "ocamlfind"
depopts: ["lwt" "cstruct" "io-page" "ipaddr"]
conflicts: [
  "ipaddr" {< "2.0.0"}
]
available: [ocaml-version >= "4.02.3"]
